syntax = "proto3";

package queue;
option go_package="./queue";

//创建订单队列
message OrderCreateRequest {
  int64 screen_id = 1;
  int64 uid = 2;
  int64 amount = 3;
  repeated string seat = 4;
}

message OrderCreateResponse {
  string order_key = 1;
}

//自动取消未支付订单队列
message OrderDelayRequest{
  int64 order_id = 1;
}

message OrderDelayResponse{
  int64 ack = 1;
}

service Queue {
  //创建订单队列
  rpc OrderQueue(OrderCreateRequest) returns(OrderCreateResponse);
  //自动取消未支付订单队列
  rpc OrderDelay(OrderDelayRequest) returns(OrderDelayResponse);
}
